# crewai_ollama

./: README.md  pyproject.toml
data/: sample_invoice.xlsx
src/crewai_ollama/: crew.py  main.py
src/crewai_ollama/agents_logic/: extract_data_logic.py
src/crewai_ollama/config/: agents.yaml  tasks.yaml
src/crewai_ollama/processor/: pdf_utils.py
src/crewai_ollama/tools/: excel_tool.py
