[project]
name = "crewai_ollama"
version = "0.1.0"
description = "crewai-ollama using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
crewai_ollama = "crewai_ollama.main:run"
run_crew = "crewai_ollama.main:run"
train = "crewai_ollama.main:train"
replay = "crewai_ollama.main:replay"
test = "crewai_ollama.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
